[package]
name = "test2"
version = "0.1.0"
authors = ["Tanapol Prucksakorn <tanapol.pr@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.5.1"
thiserror = "1.0.20"
log = "0.4.11"
fern = { version = "0.6.0", features = ["colored"] }
chrono = "0.4.15"
rayon = "1.4.0"
